--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Sunscreen",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "images": [
     {
       "variable": "logo",
@@ -142,6 +142,14 @@
       "type": "boolean",
       "default": false,
       "description": "Displays a search field in the Shop dropdown menu"
+    },
+    {
+      "variable": "show_sold_out_product_options",
+      "label": "Show sold out product options",
+      "type": "boolean",
+      "default": true,
+      "description": "Shows sold out product options in the Product page dropdowns",
+      "requires": "inventory"
     },
     {
       "variable": "secondary_image_on_hover",
