--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Sunscreen",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "images": [
     {
       "variable": "logo",
@@ -40,13 +40,18 @@
     },
     {
       "variable": "accent_color",
-      "label": "Accent Color",
+      "label": "Accent Background Color",
       "default": "#F6F8FC"
     },
     {
       "variable": "text_color",
       "label": "Text Color",
       "default": "#325DA8"
+    },
+    {
+      "variable": "link_hover_color",
+      "label": "Link Hover Color",
+      "default": "#061f49"
     },
     {
       "variable": "shop_name_text_color",
@@ -99,8 +104,8 @@
       "label": "Maximum products per row",
       "type": "select",
       "options": "1..4",
-      "default": 4,
-      "description": "The number of products displayed per row"
+      "default": 3,
+      "description": "The maximum number of products displayed per row on larger screens"
     },
     {
       "variable": "max_products_per_row_mobile",
@@ -111,11 +116,23 @@
       "description": "The number of products displayed per row on smaller screens"
     },
     {
+      "variable": "grid_image_style",
+      "label": "Product grid image style",
+      "type": "select",
+      "options": [
+        ["Default", "default"],
+        ["Fit to square", "fit-to-square"],
+        ["Crop to square", "crop-to-square"]
+      ],
+      "default": "fit-to-square",
+      "description": "Sets the display of images in the product grid"
+    },
+    {
       "variable": "products_per_page",
       "label": "Products per page",
       "type": "select",
       "options": "1..100",
-      "default": 12,
+      "default": 36,
       "description": "The number of products displayed per page"
     },
     {
