Update checkout settings for improved display and accessibility

--- a/source/settings.json
+++ b/source/settings.json
@@ -225,20 +225,20 @@
     "header_image": "{{ logo }}",
     "header_image_max_width": "754px",
     "header_image_max_height": "180px",
-    "title_font": "{{ primary_font }}",
+    "title_font": "{{ shop_name_font }}",
     "title_font_weight": "normal",
-    "title_font_size": "28px",
+    "title_font_size": "38px",
     "title_color": "{{ text_color }}",
     "title_background_color": "{{ background_color }}",
-    "title_vertical_padding": "27px",
+    "title_vertical_padding": "40px",
     "accent_background_color": "{{ accent_color }}",
     "background_color": "{{ background_color }}",
     "body_font": "{{ primary_font }}",
     "body_font_size": "16px",
     "secondary_font_size": "16px",
-    "step_border_color": "{{ background_color }}",
+    "step_border_color": "{{ text_color }}",
     "step_header_color": "{{ text_color }}",
-    "step_border_width": "4px",
+    "step_border_width": "2px",
     "step_border_style": "solid",
     "step_border_radius": "0px",
     "step_inactive_header_color": " {{ text_color }}",
@@ -246,19 +246,20 @@
     "step_background_color": "{{ background_color }}",
     "content_header_background_color": "{{ background_color }}",
     "content_header_color": "{{ text_color }}",
+    "content_horizontal_padding": "0px",
     "content_color": "{{ text_color }}",
     "content_header_font_size": "18px",
     "content_border_color": "transparent",
     "content_border_radius": "0px",
-    "error_background_color": "#ea4859",
+    "error_background_color": "#a02936",
     "error_color": "#ffffff",
     "error_border_radius": "0px",
-    "error_border_color": "#ea4859",
+    "error_border_color": "#a02936",
     "error_font_size": "16px",
     "input_focus_color": "#000000",
     "input_focus_background_color": "#ffffff",
     "input_focus_border_color": "#777777",
-    "input_error_border_color": "#ea4859",
+    "input_error_border_color": "#a02936",
     "input_color": "#000000",
     "input_error_color": "#000000",
     "input_border_color": "#bfbfbf",
