--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Sunscreen",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "images": [
     {
       "variable": "logo",
@@ -40,13 +40,33 @@
     },
     {
       "variable": "accent_color",
-      "label": "Accent Color",
+      "label": "Accent Background Color",
       "default": "#F6F8FC"
     },
     {
       "variable": "text_color",
       "label": "Text Color",
       "default": "#325DA8"
+    },
+    {
+      "variable": "button_text_color",
+      "label": "Button Text Color",
+      "default": "#FFFFFF"
+    },
+    {
+      "variable": "button_background_color",
+      "label": "Button Background Color",
+      "default": "#325DA8"
+    },
+    {
+      "variable": "button_hover_background_color",
+      "label": "Button Hover Background Color",
+      "default": "#15294D"
+    },
+    {
+      "variable": "link_hover_color",
+      "label": "Link Hover Color",
+      "default": "#15294D"
     },
     {
       "variable": "shop_name_text_color",
@@ -99,8 +119,8 @@
       "label": "Maximum products per row",
       "type": "select",
       "options": "1..4",
-      "default": 4,
-      "description": "The number of products displayed per row"
+      "default": 3,
+      "description": "The maximum number of products displayed per row on larger screens"
     },
     {
       "variable": "max_products_per_row_mobile",
@@ -111,11 +131,23 @@
       "description": "The number of products displayed per row on smaller screens"
     },
     {
+      "variable": "grid_image_style",
+      "label": "Product grid image style",
+      "type": "select",
+      "options": [
+        ["Default", "default"],
+        ["Fit to square", "fit-to-square"],
+        ["Crop to square", "crop-to-square"]
+      ],
+      "default": "crop-to-square",
+      "description": "Sets the display of images in the product grid"
+    },
+    {
       "variable": "products_per_page",
       "label": "Products per page",
       "type": "select",
       "options": "1..100",
-      "default": 12,
+      "default": 36,
       "description": "The number of products displayed per page"
     },
     {
@@ -155,7 +187,7 @@
       "variable": "secondary_image_on_hover",
       "label": "Show secondary image on hover",
       "type": "boolean",
-      "default": true,
+      "default": false,
       "description": "Displays the secondary product image when hovering over thumbnails"
     },
     {
@@ -192,20 +224,21 @@
   "checkout": {
     "header_image": "{{ logo }}",
     "header_image_max_width": "754px",
-    "header_image_max_height": "200px",
-    "title_font": "{{ primary_font }}",
+    "header_image_max_height": "180px",
+    "title_font": "{{ shop_name_font }}",
     "title_font_weight": "normal",
-    "title_font_size": "28px",
+    "title_font_size": "38px",
     "title_color": "{{ text_color }}",
     "title_background_color": "{{ background_color }}",
-    "title_vertical_padding": "27px",
+    "title_vertical_padding": "40px",
     "accent_background_color": "{{ accent_color }}",
     "background_color": "{{ background_color }}",
     "body_font": "{{ primary_font }}",
-    "body_font_size": "15px",
-    "step_border_color": "{{ background_color }}",
+    "body_font_size": "16px",
+    "secondary_font_size": "16px",
+    "step_border_color": "{{ text_color }}",
     "step_header_color": "{{ text_color }}",
-    "step_border_width": "4px",
+    "step_border_width": "2px",
     "step_border_style": "solid",
     "step_border_radius": "0px",
     "step_inactive_header_color": " {{ text_color }}",
@@ -213,18 +246,20 @@
     "step_background_color": "{{ background_color }}",
     "content_header_background_color": "{{ background_color }}",
     "content_header_color": "{{ text_color }}",
+    "content_horizontal_padding": "0px",
     "content_color": "{{ text_color }}",
     "content_header_font_size": "18px",
     "content_border_color": "transparent",
     "content_border_radius": "0px",
-    "error_background_color": "#ea4859",
+    "error_background_color": "#a02936",
     "error_color": "#ffffff",
     "error_border_radius": "0px",
-    "error_border_color": "#ea4859",
+    "error_border_color": "#a02936",
+    "error_font_size": "16px",
     "input_focus_color": "#000000",
     "input_focus_background_color": "#ffffff",
     "input_focus_border_color": "#777777",
-    "input_error_border_color": "#ea4859",
+    "input_error_border_color": "#a02936",
     "input_color": "#000000",
     "input_error_color": "#000000",
     "input_border_color": "#bfbfbf",
@@ -233,19 +268,24 @@
     "input_border_radius": "0px",
     "input_border_width": "2px",
     "input_font": "{{ primary_font }}",
-    "button_color": "{{ background_color }}",
+    "input_font_size": "16px",
+    "label_font_size": "16px",
+    "button_color": "{{ button_text_color }}",
     "button_border_width": "0px",
     "button_border_radius": "0px",
     "button_font": "{{ primary_font }}",
-    "button_hover_color": "{{ background_color }}",
-    "button_background_color": "{{ text_color }}",
-    "button_hover_background_color": "{{ text_color }}",
+    "button_font_size": "16px",
+    "button_hover_color": "{{ button_text_color }}",
+    "button_background_color": "{{ button_background_color }}",
+    "button_hover_background_color": "{{ button_hover_background_color }}",
     "button_text_transform": "none",
     "link_color": "{{ text_color }}",
+    "link_font_size": "16px",
     "link_hover_color": "{{ text_color }}",
     "step_header_color": "{{ text_color }}",
-    "step_header_font_size": "18px",
+    "step_header_font_size": "22px",
     "summary_color": "{{ text_color }}",
+    "summary_font_size": "16px",
     "summary_secondary_color": "{{ text_color }}",
     "summary_item_border_color": "{{ text_color }}",
     "summary_item_list_border_color": "{{ text_color }}",
