--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Sunscreen",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "images": [
     {
       "variable": "logo",
@@ -24,12 +24,12 @@
     {
       "variable": "shop_name_font",
       "label": "Shop Name Font",
-      "default": "Questrial"
+      "default": "Karla"
     },
     {
       "variable": "primary_font",
       "label": "Primary Font",
-      "default": "Questrial"
+      "default": "Karla"
     }
   ],
   "colors": [
@@ -41,12 +41,12 @@
     {
       "variable": "accent_color",
       "label": "Accent Background Color",
-      "default": "#F6F8FC"
+      "default": "#F7F8FC"
     },
     {
       "variable": "text_color",
       "label": "Text Color",
-      "default": "#325DA8"
+      "default": "#3B7530"
     },
     {
       "variable": "button_text_color",
@@ -56,27 +56,27 @@
     {
       "variable": "button_background_color",
       "label": "Button Background Color",
-      "default": "#325DA8"
+      "default": "#3B7530"
     },
     {
       "variable": "button_hover_background_color",
       "label": "Button Hover Background Color",
-      "default": "#15294D"
+      "default": "#1C4D12"
     },
     {
       "variable": "link_hover_color",
       "label": "Link Hover Color",
-      "default": "#15294D"
+      "default": "#1C4D12"
     },
     {
       "variable": "shop_name_text_color",
       "label": "Shop Name Text Color",
-      "default": "#325DA8"
+      "default": "#3B7530"
     },
     {
       "variable": "welcome_header_text_color",
       "label": "Welcome Header Text Color",
-      "default": "#325DA8"
+      "default": "#3B7530"
     }
   ],
   "options": [
