--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Sunscreen",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "images": [
     {
       "variable": "logo",
@@ -150,47 +150,47 @@
   "colors": [
     {
       "variable": "background_color",
-      "label": "Background Color",
+      "label": "Background",
       "default": "#FFFFFF"
     },
     {
       "variable": "accent_background_color",
-      "label": "Accent Background Color",
+      "label": "Accent Background",
       "default": "#F7F8FC"
     },
     {
       "variable": "text_color",
-      "label": "Text Color",
+      "label": "Text",
       "default": "#3B7530"
     },
     {
       "variable": "button_text_color",
-      "label": "Button Text Color",
+      "label": "Button Text",
       "default": "#FFFFFF"
     },
     {
       "variable": "button_background_color",
-      "label": "Button Background Color",
+      "label": "Button Background",
       "default": "#3B7530"
     },
     {
       "variable": "button_hover_background_color",
-      "label": "Button Hover Background Color",
+      "label": "Button Hover Background",
       "default": "#1C4D12"
     },
     {
       "variable": "link_hover_color",
-      "label": "Link Hover Color",
+      "label": "Link Hover",
       "default": "#1C4D12"
     },
     {
       "variable": "shop_name_text_color",
-      "label": "Shop Name Text Color",
+      "label": "Shop Name Text",
       "default": "#3B7530"
     },
     {
       "variable": "welcome_header_text_color",
-      "label": "Welcome Header Text Color",
+      "label": "Welcome Text",
       "default": "#3B7530"
     }
   ],
