--- a/source/settings.json
+++ b/source/settings.json
@@ -209,6 +209,18 @@
       "default": "We're working on our shop right now.<br /><br />Please check back soon."
     },
     {
+      "variable": "logo_image_height",
+      "label": "Logo image height",
+      "type": "select",
+      "options": [
+        ["Small", "120"],
+        ["Medium", "180"],
+        ["Large", "240"]
+      ],
+      "default": "120",
+      "description": "Controls the maximum height of your logo"
+    },
+    {
       "variable": "lookbook_page_name",
       "label": "Lookbook Page Name",
       "type": "text",
@@ -311,6 +323,37 @@
       "type": "boolean",
       "default": false,
       "description": "Displays the secondary product image when hovering over thumbnails"
+    },
+    {
+      "variable": "product_image_zoom",
+      "label": "Enable product image zoom",
+      "type": "boolean",
+      "default": true,
+      "description": "Click to open a larger version of the Product page image"
+    },
+    {
+      "variable": "desktop_product_page_images",
+      "label": "Desktop product page images",
+      "type": "select",
+      "options": [
+        ["Thumbnails", "thumbnails"],
+        ["Carousel", "carousel"],
+        ["Stacked 2 column", "two-column"],
+        ["Stacked full width", "stacked"]
+      ],
+      "default": "carousel",
+      "description": "Sets the display of the Product page gallery"
+    },
+    {
+      "variable": "mobile_product_page_images",
+      "label": "Mobile product page image carousel",
+      "type": "select",
+      "options": [
+        ["Show thumbnails", "show-thumbnails"],
+        ["Hide thumbnails", "hide-thumbnails"]
+      ],
+      "default": "show-thumbnails",
+      "description": "Choose to hide or show thumbnails on the mobile Product page carousel"
     },
     {
       "variable": "twitter_url",
