--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Sunscreen",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "images": [
     {
       "variable": "logo",
@@ -39,7 +39,7 @@
             },
             "colors": {
               "background_color": "#FFFFFF",
-              "accent_color": "#F7F8FC",
+              "accent_background_color": "#F7F8FC",
               "text_color": "#1C4D12",
               "button_text_color": "#FFFFFF",
               "button_background_color": "#1C4D12",
@@ -62,7 +62,7 @@
             },
             "colors": {
               "background_color": "#141415",
-              "accent_color": "#3D3D3D",
+              "accent_background_color": "#3D3D3D",
               "text_color": "#F8F8F8",
               "button_text_color": "#3D3D3D",
               "button_background_color": "#F8F8F8",
@@ -80,7 +80,7 @@
             },
             "colors": {
               "background_color": "#F8F8F8",
-              "accent_color": "#DBD1D1",
+              "accent_background_color": "#DBD1D1",
               "text_color": "#0F1B27",
               "button_text_color": "#0F1B27",
               "button_background_color": "#DBD1D1",
@@ -103,7 +103,7 @@
             },
             "colors": {
               "background_color": "#FFFBFD",
-              "accent_color": "#FFE9F4",
+              "accent_background_color": "#FFE9F4",
               "text_color": "#243588",
               "button_text_color": "#FFFBFD",
               "button_background_color": "#243588",
@@ -121,7 +121,7 @@
             },
             "colors": {
               "background_color": "#FFFFFF",
-              "accent_color": "#F6FF20",
+              "accent_background_color": "#F6FF20",
               "text_color": "#0B0423",
               "button_text_color": "#FFFFFF",
               "button_background_color": "#F90081",
@@ -150,48 +150,48 @@
   "colors": [
     {
       "variable": "background_color",
-      "label": "Background Color",
+      "label": "Background",
       "default": "#FFFFFF"
     },
     {
-      "variable": "accent_color",
-      "label": "Accent Background Color",
+      "variable": "accent_background_color",
+      "label": "Accent Background",
       "default": "#F7F8FC"
     },
     {
       "variable": "text_color",
-      "label": "Text Color",
-      "default": "#3B7530"
+      "label": "Text",
+      "default": "#1C4D12"
     },
     {
       "variable": "button_text_color",
-      "label": "Button Text Color",
+      "label": "Button Text",
       "default": "#FFFFFF"
     },
     {
       "variable": "button_background_color",
-      "label": "Button Background Color",
-      "default": "#3B7530"
+      "label": "Button Background",
+      "default": "#1C4D12"
     },
     {
       "variable": "button_hover_background_color",
-      "label": "Button Hover Background Color",
-      "default": "#1C4D12"
+      "label": "Button Hover Background",
+      "default": "#3B7530"
     },
     {
       "variable": "link_hover_color",
-      "label": "Link Hover Color",
-      "default": "#1C4D12"
+      "label": "Link Hover",
+      "default": "#3B7530"
     },
     {
       "variable": "shop_name_text_color",
-      "label": "Shop Name Text Color",
-      "default": "#3B7530"
+      "label": "Shop Name Text",
+      "default": "#1C4D12"
     },
     {
       "variable": "welcome_header_text_color",
-      "label": "Welcome Header Text Color",
-      "default": "#3B7530"
+      "label": "Welcome Text",
+      "default": "#1C4D12"
     }
   ],
   "options": [
@@ -233,6 +233,13 @@
       "description": "Displays a welcome message on the Home page"
     },
     {
+      "variable": "featured_header",
+      "label": "Featured header",
+      "type": "text",
+      "description": "Displays above your featured products or categories on the Home page",
+      "default": "Featured"
+    },
+    {
       "variable": "featured_items_type",
       "label": "Featured items type",
       "type": "select",
@@ -247,6 +254,13 @@
       "options": "0..100",
       "default": 12,
       "description": "The number of items featured on the Home page"
+    },
+    {
+      "variable": "all_products_button_text",
+      "label": "All products button text",
+      "type": "text",
+      "description": "Displays underneath featured items and links to your Product Page",
+      "default": "All Products"
     },
     {
       "variable": "max_products_per_row",
@@ -269,11 +283,11 @@
       "label": "Product grid image style",
       "type": "select",
       "options": [
-        ["Default", "default"],
-        ["Fit to square", "fit-to-square"],
-        ["Crop to square", "crop-to-square"]
+        ["Normal", "default"],
+        ["Fit to square", "contain"],
+        ["Crop to square", "cover"]
       ],
-      "default": "crop-to-square",
+      "default": "cover",
       "description": "Sets the display of images in the product grid"
     },
     {
@@ -281,7 +295,7 @@
       "label": "Products per page",
       "type": "select",
       "options": "1..100",
-      "default": 36,
+      "default": 48,
       "description": "The number of products displayed per page"
     },
     {
@@ -296,7 +310,7 @@
       "description": "Sets the display of prices in your shop"
     },
     {
-      "variable": "show_similar_products",
+      "variable": "show_related_products",
       "label": "Show related products",
       "type": "boolean",
       "default": true,
@@ -306,23 +320,8 @@
       "variable": "show_search",
       "label": "Show search",
       "type": "boolean",
-      "default": false,
-      "description": "Displays a search field in the Shop dropdown menu"
-    },
-    {
-      "variable": "show_sold_out_product_options",
-      "label": "Show sold out product options",
-      "type": "boolean",
       "default": true,
-      "description": "Shows sold out product options in the Product page dropdowns",
-      "requires": "inventory"
-    },
-    {
-      "variable": "secondary_image_on_hover",
-      "label": "Show secondary image on hover",
-      "type": "boolean",
-      "default": false,
-      "description": "Displays the secondary product image when hovering over thumbnails"
+      "description": "Displays a search field in the Shop dropdown menu"
     },
     {
       "variable": "product_image_zoom",
@@ -356,34 +355,86 @@
       "description": "Choose to hide or show thumbnails on the mobile Product page carousel"
     },
     {
-      "variable": "twitter_url",
-      "label": "Twitter URL",
-      "type": "text",
-      "description": "Ex: http://twitter.com/bigcartel"
+      "variable": "show_sold_out_product_options",
+      "label": "Show sold out product options",
+      "type": "boolean",
+      "default": true,
+      "description": "Shows sold out product options in the Product page dropdowns",
+      "requires": "inventory"
     },
     {
-      "variable": "facebook_url",
-      "label": "Facebook URL",
-      "type": "text",
-      "description": "Ex: http://facebook.com/bigcartel"
+      "variable": "secondary_image_on_hover",
+      "label": "Show secondary image on hover",
+      "type": "boolean",
+      "default": false,
+      "description": "Displays the secondary product image when hovering over thumbnails"
     },
     {
-      "variable": "tumblr_url",
-      "label": "Tumblr URL",
-      "type": "text",
-      "description": "Ex: http://bigcartel.tumblr.com"
+      "variable": "border_radius",
+      "label": "Rounded corners",
+      "type": "select",
+      "options": [
+        ["Off", "0"],
+        ["Small", "2px"],
+        ["Medium", "4px"],
+        ["Large", "8px"]
+      ],
+      "default": "4px",
+      "description": "Controls the rounded corner style on images and other site elements"
     },
     {
       "variable": "instagram_url",
       "label": "Instagram URL",
       "type": "text",
-      "description": "Ex: http://instagram.com/bigcartel"
+      "description": "Ex: https://instagram.com/bigcartel"
+    },
+    {
+      "variable": "tiktok_url",
+      "label": "TikTok URL",
+      "type": "text",
+      "description": "Ex: https://tiktok.com/@bigcartelofficial"
+    },
+    {
+      "variable": "twitter_url",
+      "label": "Twitter URL",
+      "type": "text",
+      "description": "Ex: https://twitter.com/bigcartel"
+    },
+    {
+      "variable": "facebook_url",
+      "label": "Facebook URL",
+      "type": "text",
+      "description": "Ex: https://facebook.com/bigcartel"
+    },
+    {
+      "variable": "snapchat_url",
+      "label": "Snapchat URL",
+      "type": "text",
+      "description": "Ex: https://snapchat.com/add/bigcartel"
     },
     {
       "variable": "pinterest_url",
       "label": "Pinterest URL",
       "type": "text",
-      "description": "Ex: http://pinterest.com/bigcartel"
+      "description": "Ex: https://pinterest.com/big_cartel"
+    },
+    {
+      "variable": "youtube_url",
+      "label": "YouTube URL",
+      "type": "text",
+      "description": "Ex: https://youtube.com/@BigCartelDotCom"
+    },
+    {
+      "variable": "tumblr_url",
+      "label": "Tumblr URL",
+      "type": "text",
+      "description": "Ex: https://bigcartel.tumblr.com"
+    },
+    {
+      "variable": "bandcamp_url",
+      "label": "Bandcamp URL",
+      "type": "text",
+      "description": "Ex: https://bigcartel.bandcamp.com"
     }
   ],
   "checkout": {
@@ -396,7 +447,7 @@
     "title_color": "{{ shop_name_text_color }}",
     "title_background_color": "{{ background_color }}",
     "title_vertical_padding": "40px",
-    "accent_background_color": "{{ accent_color }}",
+    "accent_background_color": "{{ accent_background_color }}",
     "background_color": "{{ background_color }}",
     "body_font": "{{ primary_font }}",
     "body_font_size": "16px",
