feat: add XL and XXL logo max size options
Also changes the medium breakpoint logo size to be same max logo height instead of 20% smaller

--- a/source/settings.json
+++ b/source/settings.json
@@ -1,6 +1,6 @@
 {
   "name": "Sunscreen",
-  "version": "1.9.1",
+  "version": "1.9.2",
   "images": [
     {
       "variable": "logo",
@@ -215,7 +215,9 @@
       "options": [
         ["Small", "80"],
         ["Medium", "100"],
-        ["Large", "120"]
+        ["Large", "120"],
+        ["Extra Large", "140"],
+        ["XX Large", "160"]
       ],
       "default": "100",
       "description": "Controls the maximum height of your logo"
