--- a/source/settings.json
+++ b/source/settings.json
@@ -227,7 +227,7 @@
     },
     {
       "variable": "accent_background_color",
-      "label": "Accent Background",
+      "label": "Accent background",
       "default": "#F7F8FC"
     },
     {
@@ -237,32 +237,32 @@
     },
     {
       "variable": "button_text_color",
-      "label": "Button Text",
+      "label": "Button text",
       "default": "#FFFFFF"
     },
     {
       "variable": "button_background_color",
-      "label": "Button Background",
+      "label": "Button background",
       "default": "#1C4D12"
     },
     {
       "variable": "button_hover_background_color",
-      "label": "Button Hover Background",
+      "label": "Button hover background",
       "default": "#3B7530"
     },
     {
       "variable": "link_hover_color",
-      "label": "Link Hover",
+      "label": "Link hover",
       "default": "#3B7530"
     },
     {
       "variable": "shop_name_text_color",
-      "label": "Shop Name Text",
+      "label": "Shop name text",
       "default": "#1C4D12"
     },
     {
       "variable": "welcome_header_text_color",
-      "label": "Welcome Text",
+      "label": "Welcome text",
       "default": "#1C4D12"
     }
   ],
@@ -303,12 +303,6 @@
       "description": "The number of custom page links show in the main navigation"
     },
     {
-      "variable": "lookbook_page_name",
-      "label": "Lookbook Page Name",
-      "type": "text",
-      "description": "Create a custom page for your lookbook, then enter the page name in this field"
-    },
-    {
       "variable": "welcome_text",
       "label": "Welcome text",
       "type": "text",
@@ -323,7 +317,7 @@
     },
     {
       "variable": "featured_items_type",
-      "label": "Featured items type",
+      "label": "Featured products type",
       "type": "select",
       "options": ["Categories", "Products"],
       "default": "Products",
@@ -331,7 +325,7 @@
     },
     {
       "variable": "featured_items",
-      "label": "Featured items",
+      "label": "Featured products",
       "type": "select",
       "options": "0..100",
       "default": 12,
@@ -389,17 +383,6 @@
       "description": "The number of products displayed per page"
     },
     {
-      "variable": "money_format",
-      "label": "Price display",
-      "type": "select",
-      "options": [
-        ["Currency sign", "sign"],
-        ["Currency code with sign", "sign_and_code"]
-      ],
-      "default": "sign",
-      "description": "Sets the display of prices in your shop"
-    },
-    {
       "variable": "show_related_products",
       "label": "Show related products",
       "type": "boolean",
@@ -425,7 +408,7 @@
       "description": "Displays above related products on Products pages",
       "default": "You might also like",
       "requires": [
-        "show_similar_products eq true"
+        "show_related_products eq true"
       ]
     },
     {
@@ -482,6 +465,13 @@
       "description": "Choose to hide or show thumbnails on the mobile Product page carousel"
     },
     {
+      "variable": "secondary_image_on_hover",
+      "label": "Show secondary image on hover",
+      "type": "boolean",
+      "default": false,
+      "description": "Displays the secondary product image when hovering over thumbnails in Product grids"
+    },
+    {
       "variable": "show_sold_out_product_options",
       "label": "Show sold out product options",
       "type": "boolean",
@@ -490,11 +480,10 @@
       "requires": "inventory"
     },
     {
-      "variable": "secondary_image_on_hover",
-      "label": "Show secondary image on hover",
-      "type": "boolean",
-      "default": false,
-      "description": "Displays the secondary product image when hovering over thumbnails"
+      "variable": "lookbook_page_name",
+      "label": "Lookbook Page Name",
+      "type": "text",
+      "description": "Create a custom page for your lookbook, then enter the page name in this field"
     },
     {
       "variable": "border_radius",
@@ -508,6 +497,17 @@
       ],
       "default": "4px",
       "description": "Controls the rounded corner style on images and other site elements"
+    },
+    {
+      "variable": "money_format",
+      "label": "Price display",
+      "type": "select",
+      "options": [
+        ["Currency sign", "sign"],
+        ["Currency code with sign", "sign_and_code"]
+      ],
+      "default": "sign",
+      "description": "Sets the display of prices in your shop"
     },
     {
       "variable": "instagram_url",
